added mathbox js/css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>MathBox - Surface</title>
-    <script src="https://gitgud.io/unconed/mathbox/raw/master/build/mathbox-bundle.js"></script>
-    <link rel="stylesheet" href="https://gitgud.io/unconed/mathbox/raw/master/build/mathbox.css">
+    <script src="./js/mathbox.js"></script>
+    <link rel="stylesheet" href="./css/mathbox.css">
     <script src="js/main.js"></script>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   </head>
