--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MathBox - Surface</title>
+    <title>MathBox - Domain Coloring</title>
     <script src="js/mathbox.js"></script>
     <link rel="stylesheet" href="css/mathbox.css">
     <script src="js/main.js"></script>
